# lama

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  chunker.py  config_loader.py  folder_scanner.py  ollama_client.py  output_writer.py  task_dispatcher.py  token_calculator.py
config/: models.json
docs/: codebase-runner-full-doc.md
outputs/docs/NCS.CORE/: .NETCoreApp,Version=v8.0.AssemblyAttributes.md  CbBackgroundRequest.md  CbBackgroundWorkService.md  CbChatMatrixHandler.md  CbChatMatrixHandlerConstants.md  CbChatMatrixHandlerDBWork.md  CbChatMatrixHandlerFileOperations.md  CbChatMatrixHandlerFlow.md  CbChatMatrixHandlerHelper.md  CbChatMatrixHandlerHumanReadableJson.md  CbChatMatrixHandlerOtherFunctions.md  CbChatMatrixHandlerStaticHelpers.md  ICbBackgroundWorkService.md  ICbChatMatrixHandler.md  IPDATA.md  NCS.Core.AssemblyInfo.md  NCS.Core.GlobalUsings.g.md  PDATA.md  PDATABackgroundWork.md  PDATAPromptLogs.md  PDATAResourceFiles.md
tests/: test_chunker.py  test_config_loader.py  test_folder_scanner.py  test_ollama_client.py  test_output_writer.py  test_task_dispatcher.py  test_token_calculator.py
